# docs/swagger.json
@@ -262,22 +262,6 @@
                 }
             }
         },
-        "/api/v1/proms": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "获取所有proms",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Resp.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/rule": {
             "get": {
                 "produces": [
